       - Added ChallengeResponse.secretAlgorithm property in case the
         password is only known and usable in a hashed form (like it 
         can be the case for HTTP Digest). Added new constructors as 
         well as on ChallengeMessage.
       - Increased the default request and response buffer size of the
         internal connector to 16 and 32 kb in order, similar to Jetty.
    - New features
       - Added ChallengeScheme.HTTP_AWS_QUERY constant and client-
         side support for Amazon Web Services's SimpleDB special
         authentication scheme (using URI query parameters).
       - Added ISO 8601 date format in DateUtils class.
    - Misc
       - Updated SLF4j to version 1.6.2
       - Updated Apache Commons Codec to version 1.5
       - Updated Apache Commons Collection to version 3.2.1
       - Updated Apache Commons FileUpload to version 1.2.2
       - Updated Apache Commons IO to version 2.0.1
       - Updated Apache Commons Lang to version 2.6
       - Updated Apache Commons Pool to version 1.5.6
       - Updated Apache HTTP Client to version 4.1.1
       - Updated Apache HTTP Core to version 4.1
       - Updated Apache HTTP MIME to version 4.1.1
       - Updated Jackson to version 1.9.0
       - Updated FreeMarker to version 2.3.18

- 2.1 Milestone 7 (08/24/2011)
    - Bug fixed
       - Fixed blocking regression in the GWT edition that avoids to 
         compile client proxies. Reported by Joscha Feth.
      
- 2.1 Milestone 6 (08/20/2011)
    - Breaking change
      - When retrieving or updating the raw headers in the Request or 
        Response attributes, the type should now be Series<Header> 
        instead of Series<Parameter>.
      - The SecretVerifier.verify(identifier, secret) nows returns an
        integer instead of a Boolean for more precise answers such as
        for stale credentials (expired password).
    - API changes
      - Renamed UniformResource into Resource with proper deprecation.