@@ -65,6 +65,8 @@ Changes log
          well as on ChallengeMessage.
        - Increased the default request and response buffer size of the
          internal connector to 16 and 32 kb in order, similar to Jetty.
+       - Increased default timeouts for internal connector. 5 mn for 
+         idle thread and 1 mn for idle IO connection.
     - New features
        - Added ChallengeScheme.HTTP_AWS_QUERY constant and client-
          side support for Amazon Web Services's SimpleDB special
